# arxiv_mllm_mnbvc

./: README.md  pyproject.toml  requirements.txt
doc2json/grobid2json/: process_pdf.py
doc2json/tex2json/: arxiv_to_mm.py  concat_parquet.py  detect_file_type.py  json_to_md.py  process_source.py  process_tex.py  tex_to_xml.py  xml_to_json.py
doc2json/utils/: latex_util.py
