[project]
name = "arxiv_mllm_mnbvc"
version = "0.1.0"
description = "ArXiv文档解析工具"
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "beautifulsoup4==4.7.1",
    "boto3==1.9.147",
    "requests==2.21.0",
    "Flask==1.0.2",
    "lxml",
    "python-magic==0.4.18",
    "latex2mathml==2.16.2",
    "itsdangerous==2.0.1",
    "loguru",
    "pillow",
    "htmlmin",
    "pylibmagic",
    "pdf2image",
    "pyarrow",
    "PyMuPDF>=1.23.0",
    "setuptools>=75.3.2",
    "pandas>=2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doc2json"]

[tool.uv]
dev-dependencies = [
    "pytest",
]
